<?xml version="1.0"?>
<package format="3">
  <name>laserscan_preprocessor</name>
  <version>0.0.0</version>
  <description>Laser scan preprocessing node</description>
  <maintainer email="ndietz@todo.todo">ndietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>rises_interfaces</build_depend>
  <build_depend>libnanoflann-dev</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rises_interfaces</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <test_depend>tf2_ros</test_depend>
  <test_depend>test_support</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
