<?xml version="1.0"?>
<package format="3">
  <name>message_translator</name>
  <version>0.2.0</version>
  <description>
    ROS2 bridge node translating VDA5050/MQTT JSON messages to typed ROS2 messages.
  </description>
  <maintainer email="niklas.dietz@gmx.de">ndietz</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rises_interfaces</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>nlohmann-json-dev</build_depend>

  <!-- Dependencies for running -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rises_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>

  <!-- Test-only dependencies -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>

  <!-- Export as a component package -->
  <export>
    <build_type>ament_cmake</build_type>
    <rclcpp_components/>
  </export>
</package>
