<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_aggregator</name>
  <version>0.1.0</version>
  <description>
    Aggregates unmatched obstacle reports from multiple AGVs into a single
    fleet-wide obstacle view. Optional node — only needed in multi-AGV deployments.
  </description>
  <maintainer email="niklas.dietz@slapstack.de">Niklas Dietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rises_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
