<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_heatmap_predictor</name>
  <version>0.1.0</version>
  <description>
    Predicts future obstacle (human) positions based on tracked obstacle trajectories
    from the geofence node. Publishes an OccupancyGrid heatmap of predicted presence
    probability for the next 30-60 seconds. Addresses the ARISE ROS4HRI requirement
    for predictive human-robot interaction beyond passive geofencing.
  </description>
  <maintainer email="niklas.dietz@slapstack.de">Niklas Dietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rises_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
