<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rises_bringup</name>
  <version>0.0.0</version>
  <description>Top-level launch, RViz, and parameter configuration for the ARISE / RISES ROS 2 stack.</description>
  <maintainer email="niklas.dietz@gmx.de">ndietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>action_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>rises_skill_bridge</exec_depend>
  <exec_depend>rises_mission_controller</exec_depend>
  <exec_depend>obstacle_heatmap_predictor</exec_depend>
  <exec_depend>fiware_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
