<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rises_leg_filter</name>
  <version>0.1.0</version>
  <description>
    Filters unmatched geofence obstacles for likely human leg-pairs using
    width, velocity, and persistence heuristics. Publishes candidates to
    the ROS4HRI /humans/bodies/ namespace with low confidence for fusion
    with camera-based detections. Optional node — geofence operates
    identically without it.
  </description>
  <maintainer email="niklas.dietz@slapstack.de">Niklas Dietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rises_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
