<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rises_task_examples</name>
  <version>0.1.0</version>
  <description>
    Reference implementation showing how to compose ARISE geofence skills
    into tasks. Provides three example tasks (safe_navigation, corridor_crossing,
    maintenance_mode) triggered via Trigger services. Intended as a demo for
    integrators building their own mission controllers.
  </description>
  <maintainer email="niklas.dietz@slapstack.de">Niklas Dietz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rises_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
